--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <!-- <script src="./002.js"></script> -->
     <!-- <script src="./009.js"></script> -->
     <!-- <script src="./010.js"></script> -->
+    <!-- <script src="./011.js"></script> -->
+    <!-- <script src="./012.js"></script> -->
+    <script src="./013.js"></script>
 
 </body>
 </html>
