--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <!-- <script src="./010.js"></script> -->
     <!-- <script src="./011.js"></script> -->
     <!-- <script src="./012.js"></script> -->
-    <script src="./013.js"></script>
+    <!-- <script src="./013.js"></script> -->
+    <!-- <script src="./014.js"></script> -->
+    <!-- <script src="./015.js"></script> -->
 
 </body>
 </html>
