--- a/index.html
+++ b/index.html
@@ -7,6 +7,34 @@
     <title>JS 100제</title>
 </head>
 <body>
+    <h1>몰랐던 내용 정리</h1>
+    <ul>
+        <li>
+            <h3>6번 문제</h3>
+            <p>
+                false로 취급되는 것: null, undefined, 0, 빈 문자열, NaN, false
+            </p>
+        </li>
+        <li>
+            <h3>7번 문제</h3>
+            <p>JavaScript 식별자는 문자, 밑줄(_), 달러 기호($)로 시작할 수 있다.</p>
+            <p>JavaScript 문법에 존재하는 예약어는 변수로 사용할 수 없다.</p>
+        </li>
+        <li>
+            <h3>10번 문제</h3>
+            <p>
+                이중 for문 다시 풀어보기
+            </p>
+        </li>
+        <li>
+            <h3>16번 문제</h3>
+            <p>
+                배열.reverse()는 배열의 순서를 반전시킨다!!!
+            </p>
+        </li>
+    </ul>
+
+
 
     <!-- <script src="./001.js"></script> -->
     <!-- <script src="./002.js"></script> -->
@@ -17,6 +45,8 @@
     <!-- <script src="./013.js"></script> -->
     <!-- <script src="./014.js"></script> -->
     <!-- <script src="./015.js"></script> -->
+    <!-- <script src="./016.js"></script> -->
+    <!-- <script src="./017.js"></script> -->
 
 </body>
 </html>
