--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
     <!-- <script src="./017.js"></script> -->
     <!-- <script src="./018.js"></script> -->
     <!-- <script src="./019.js"></script> -->
+    <!-- <script src="./020.js"></script> -->
+    <!-- <script src="./024.js"></script> -->
+    <!-- <script src="./025.js"></script> -->
 
 </body>
 </html>
