--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
                 배열.reverse()는 배열의 순서를 반전시킨다!!!
             </p>
         </li>
+        <li>
+            <h3>26번 문제</h3>
+            <p>
+                값이 짝지어 지는 건 key, value로 나누어 object로 저장해보자.
+            </p>
+        </li>
     </ul>
 
 
@@ -52,6 +58,8 @@
     <!-- <script src="./020.js"></script> -->
     <!-- <script src="./024.js"></script> -->
     <!-- <script src="./025.js"></script> -->
+    <!-- <script src="./026.js"></script> -->
+    <!-- <script src="./027.js"></script> -->
 
 </body>
 </html>
