--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
                 값이 짝지어 지는 건 key, value로 나누어 object로 저장해보자.
             </p>
         </li>
+        <li>
+            <h3>30번 문제</h3>
+            <p>
+                indexOf() 메서드는 호출한 스트링 객체나 배열에서 주어진 값과 일치하는 값 혹은 요소의 첫 번째 인덱스를 반환하고 존재하지 않으면 -1을 반환한다.
+            </p>
+        </li>
     </ul>
 
 
@@ -60,6 +66,9 @@
     <!-- <script src="./025.js"></script> -->
     <!-- <script src="./026.js"></script> -->
     <!-- <script src="./027.js"></script> -->
+    <!-- <script src="./028.js"></script> -->
+    <!-- <script src="./029.js"></script> -->
+    <!-- <script src="./030.js"></script> -->
 
 </body>
 </html>
