--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
                 indexOf() 메서드는 호출한 스트링 객체나 배열에서 주어진 값과 일치하는 값 혹은 요소의 첫 번째 인덱스를 반환하고 존재하지 않으면 -1을 반환한다.
             </p>
         </li>
+        <li>
+            <h3>31번 문제</h3>
+            <p>
+                배열 내장함수의 시간 복잡도가 O(1)
+            </p>
+        </li>
     </ul>
 
 
@@ -69,6 +75,8 @@
     <!-- <script src="./028.js"></script> -->
     <!-- <script src="./029.js"></script> -->
     <!-- <script src="./030.js"></script> -->
+    <!-- <script src="./032.js"></script> -->
+    <!-- <script src="./033.js"></script> -->
 
 </body>
 </html>
