--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     <!-- <script src="./030.js"></script> -->
     <!-- <script src="./032.js"></script> -->
     <!-- <script src="./033.js"></script> -->
+    <script src="./034.js"></script>
 
 </body>
 </html>
