--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
                 배열 내장함수의 시간 복잡도가 O(1)
             </p>
         </li>
+        <li>
+            <h3>35번 문제</h3>
+            <p>
+                Math.pow(a, b): a에 b제곱 
+            </p>
+        </li>
     </ul>
 
 
@@ -77,7 +83,10 @@
     <!-- <script src="./030.js"></script> -->
     <!-- <script src="./032.js"></script> -->
     <!-- <script src="./033.js"></script> -->
-    <script src="./034.js"></script>
+    <!-- <script src="./034.js"></script> -->
+    <!-- <script src="./035.js"></script> -->
+    <!-- <script src="./036.js"></script> -->
+    <script src="./037.js"></script>
 
 </body>
 </html>
