--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
     <!-- <script src="./036.js"></script> -->
     <!-- <script src="./037.js"></script> -->
     <!-- <script src="./038.js"></script> -->
-    <script src="./039.js"></script>
+    <!-- <script src="./039.js"></script> -->
+    <!-- <script src="./040.js"></script> -->
 
 </body>
 </html>
