--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
     <!-- <script src="./038.js"></script> -->
     <!-- <script src="./039.js"></script> -->
     <!-- <script src="./040.js"></script> -->
+    <!-- <script src="./041.js"></script> -->
+    <!-- <script src="./042.js"></script> -->
 
 </body>
 </html>
