--- a/index.html
+++ b/index.html
@@ -56,6 +56,22 @@
                 Math.pow(a, b): a에 b제곱 
             </p>
         </li>
+        <li>
+            <h3>45번 문제</h3>
+            <p>
+                연도 구하기:
+                Math.floor(new Date().getTime() / (365*24*60*60*1000)) + 1970
+            </p>
+            <h4>계산할 때 사용한 숫자 의미</h4>
+            <ul>
+                <li>365: 1년</li>
+                <li>24: 1일</li>
+                <li>60: 1시간</li>
+                <li>60: 1분</li>
+                <li>1000: 1초</li>
+                <li>1970: getTime()은 1970년부터 계산한 숫자라서 </li>
+            </ul>
+        </li>
     </ul>
 
 
@@ -92,6 +108,10 @@
     <!-- <script src="./040.js"></script> -->
     <!-- <script src="./041.js"></script> -->
     <!-- <script src="./042.js"></script> -->
+    <!-- <script src="./043.js"></script> -->
+    <!-- <script src="./044.js"></script> -->
+    <!-- <script src="./045.js"></script> -->
+    <script src="./046.js"></script>
 
 </body>
 </html>
